# managed-prometheus-exporter-ebs-iops-reporter

./: .gitignore  Makefile  OWNERS  README.md  functions.mk  project.mk  pyproject.toml  tox.ini
deploy/: 010_serviceaccount-rolebinding.yaml  020-awscredentials-request.yaml  050_service.yaml  060_servicemonitor.yaml
hack/: 00-osd-managed-prometheus-exporter-ebs-iops-reporter.selectorsyncset.yaml.tmpl  app_sre_pr_check.sh
monitor/: main.py  start.sh  test_main.py
resources/: 010_serviceaccount-rolebinding.yaml.tmpl  020-awscredentials-request.yaml.tmpl  030_ca-configmap.yaml.tmpl  040_deployment.yaml.tmpl  050_service.yaml.tmpl  060_servicemonitor.yaml.tmpl  secrets-config.tmpl  secrets-credentials.tmpl
scripts/: generate_syncset.py
scripts/templates/: selectorsyncset.yaml  template.yaml
